test/fixtures/configs/pages/post/fail/error.js
module.exports = {
  url: '/users/1/projects/1/pages',
  method: 'post',
  headers: {
    authorization: 'token userToken'
  },
  payload: {
    x: 3,
    y: 3
  }
};
